# dict_to_protobuf_to_dict

./: dict_to_protobuf_to_dict.py  pyproject.toml
tests/: notes.md  sample.proto  sample_pb2.py  sample_pb2.pyi  test_dict_to_proto_to_dict.py  unittests.proto
